fix: add missing margin to the tracker

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+.block-language-ActivityHistory {
+  margin: 1rem 0;
+}
+
 .selectYear {
     border-color: none;
 }
